AWS/pod-web/front/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  selector:
    matchLabels:
      tier: front
  template:
    metadata:
      name: front-deployment
      labels:
        tier: front
    spec:
      containers:
      - name: test-front
        image: 596401894998.dkr.ecr.ap-northeast-2.amazonaws.com/book-network:frontlatest
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
