AWS/pod-web/front/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  selector:
    tier: front
  ports:
  - port: 8080
    targetPort: 8081
