AWS/pod-web/front/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  labels:
    app: web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-service
            port: 
              number: 80
